# data-challenge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  dto.py  logging_config.py  main.py  models.py
app/routers/: analytics.py  ingestion.py
app/services/: analytics.py  avro_backup.py  avro_restore.py  ingestion.py  rejection_log.py  validation.py
scripts/: backup.py  ingest_historical.py  init_db.py  restore.py
tests/: test_validation.py
